# bear-brain

./: .gitignore  AGENTS.md  README.md  memory_worker.py  pyproject.toml
.opencode/plugins/: bear-brain-daily.js  bear-brain-daily.test.js
docs/: CHANGELOG.md  COMPLETIONS.md  DECISIONS.md
docs/guide/: GUIDE.md
docs/plans/: 2026-03-15-bear-brain-foundation.md
docs/product/: SPEC.md
skills/bearbrain/admission/: SKILL.md
skills/bearbrain/bear-editing/: SKILL.md
skills/bearbrain/book-entry/: SKILL.md
skills/bearbrain/context-router/: SKILL.md
skills/bearbrain/doc-publish/: SKILL.md
skills/bearbrain/governance-core/: SKILL.md
skills/bearbrain/memory/: SKILL.md
skills/bearbrain/note-lint/: SKILL.md
skills/bearbrain/promote-memory/: SKILL.md
skills/bearbrain/search/: SKILL.md
skills/bearbrain/search-core/: SKILL.md
skills/bearbrain/workstream/: SKILL.md
skills/bearbrain/write-core/: SKILL.md
skills/skills-disabled/book-entry/: SKILL.md
skills/skills-disabled/note-lint/: SKILL.md
src/bear_brain/: __init__.py  cli.py  config.py  daily_hook.py  daily_memory.py  docs_publish.py  memory_store.py  models.py  promote.py  router.py  search.py  search_index.py
tests/: conftest.py  test_cli.py  test_config.py  test_daily_memory.py  test_docs_publish.py  test_end_to_end.py  test_memory_store.py  test_models.py  test_plugin_files.py  test_preload.py  test_promote.py  test_promote_auto.py  test_runtime_gate.py  test_runtime_state_machine.py  test_search_router.py  test_skill_files.py
tests/benchmark/: test_vector_baseline.py
(+29 files in other folders)
